Finished tests and history and notifications