@@ -1,36 +1,33 @@
 package Domain.Shopping;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Set;
-import java.util.UUID;
+import java.util.*;
 
 import Domain.Pair;
-import jakarta.persistence.Embedded;
-import jakarta.persistence.Entity;
-import jakarta.persistence.Id;
+import jakarta.persistence.*;
 
 @Entity
 public class Offer {
 
-    // !TODO: add Persistence annotations for JPA
     @Id
     private String offerId;
 
     private String memberId;
     private String storeId;
     private String productId;
-    
     private boolean counterOffer;
-    private List<Pair<String, Double>> prices;
-    private Set<String> approvedBy; // includes member and employees who approved the offer
-    private boolean isAccepted; // true if the offer is accepted by the member
+    private boolean isAccepted;
 
     @Embedded
     private PaymentDetails paymentDetails;
+
+    @ElementCollection
+    @CollectionTable(name = "offer_prices", joinColumns = @JoinColumn(name = "offer_id"))
+    private List<PriceEntry> prices = new ArrayList<>();
+
+    @ElementCollection
+    @CollectionTable(name = "offer_approvals", joinColumns = @JoinColumn(name = "offer_id"))
+    @Column(name = "user_id")
+    private Set<String> approvedBy = new HashSet<>();
 
     protected Offer() {} // JPA needs a default constructor
 
@@ -39,47 +36,50 @@ public class Offer {
         this.memberId = memberId;
         this.storeId = storeId;
         this.productId = productId;
-        this.prices = new ArrayList<>(List.of(new Pair<>(memberId, newPrice)));
         this.paymentDetails = paymentDetails;
         this.counterOffer = false;
-        this.approvedBy = new HashSet<>(Arrays.asList(memberId)); 
-        this.isAccepted = false; // Initially, the offer is not accepted
+        this.isAccepted = false;
+
+        this.prices.add(new PriceEntry(memberId, newPrice));
+        this.approvedBy.add(memberId);
     }
 
     public boolean counterOffer(String userId, double newPrice) {
-        this.approvedBy = new HashSet<>(Arrays.asList(userId)); // Reset approved employees for a new counter offer
-        this.prices.add(new Pair<>(userId, newPrice));
-        // Check if employee makes a counter offer or the member
-        this.counterOffer = userId != memberId;
-        
+        this.approvedBy = new HashSet<>(List.of(userId));
+        this.prices.add(new PriceEntry(userId, newPrice));
+        this.counterOffer = !userId.equals(memberId);
         return counterOffer;
     }
 
+    public void approveOffer(String userId) {
+        if (!approvedBy.add(userId)) {
+            throw new IllegalStateException("User " + userId + " has already approved this offer.");
+        }
+    }
+
     public boolean isCounterOffer() { return counterOffer; }
+    public boolean isAccepted() { return isAccepted; }
+    public void setAccepted(boolean accepted) { this.isAccepted = accepted; }
+
     public double getLastPrice() {
         if (prices.isEmpty()) {
             throw new IllegalStateException("No prices available for this offer.");
         }
-        return prices.get(prices.size() - 1).getSecond();
-    }
-    public String getId() { return offerId; }
-    public String getMemberId() { return memberId; }
-    public Set<String> getApprovedBy() { return approvedBy; }
-    public String getStoreId() { return storeId; }
-    public String getProductId() { return productId; }
-    public PaymentDetails getPaymentDetails() { return this.paymentDetails; }
-    public List<Pair<String, Double>> getPrices() { return prices;}
-    public boolean isAccepted() { return isAccepted; }
-    public void setAccepted(boolean accepted) {
-        this.isAccepted = accepted;
+        return prices.get(prices.size() - 1).getPrice();
     }
 
-    public void approveOffer(String userId) {
-        if (!approvedBy.contains(userId)) {
-            approvedBy.add(userId);
+    public String getId() { return offerId; }
+    public String getMemberId() { return memberId; }
+    public String getStoreId() { return storeId; }
+    public String getProductId() { return productId; }
+    public List<Pair<String, Double>> getPrices() {
+        List<Pair<String, Double>> result = new ArrayList<>();
+        for (PriceEntry entry : prices) {
+            result.add(new Pair<>(entry.getUserId(), entry.getPrice()));
         }
-        else {
-            throw new IllegalStateException("User " + userId + " has already approved this offer.");
-        }
-    }
+        return result;
+    }   
+
+    public Set<String> getApprovedBy() { return approvedBy; }
+    public PaymentDetails getPaymentDetails() { return paymentDetails; }
 }
